Bug 1868664 - Make `EditorBase::SetTextDirectionTo` use active editing host if it's an `HTMLEditor` r=m_kato

Chrome handles text direction change as a block level format command.  I.e.,
Chrome sets `dir` attributes of enclosing editable blocks of selected leaf
nodes.  However, aligning to this may require a lot of change and Thunderbird
may require the traditional behavior.

On the other hand, it's obviously wrong thing that `Ctrl` + `Shift` + `X` in an
editable element changes the direction of entire the document since the `<body>`
may not be editable.

Therefore, this patch just changes the direction change target from `<body>`
to active editing host if it's an `HTMLEditor`.

Differential Revision: https://phabricator.services.mozilla.com/D195838